fixed background color cutting off at html

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,20 +1,20 @@
-html, body {
+/* html, body {
   margin: 0;
   height: 100%;
-}
+} */
 
-html {
+/* html {
   padding: 1em;
-}
+} */
 
 body {
   font-family: 'Oxygen', sans-serif;
   letter-spacing: .1rem;
   height: 100%;
-  background: radial-gradient(circle at top right, #ebcbf7 10%, #fcf3ef, #fdfcf9 40%);
-  /* background-color: #85FFBD;
-  background-image: linear-gradient(45deg, #85FFBD 0%, #FFFB7D 100%); */
-  /* padding: 1em; */
+  /* background: radial-gradient(circle at top right, #ebcbf7 10%, #fcf3ef, #fdfcf9 40%); */
+  background-color: #85FFBD;
+  background-image: linear-gradient(45deg, #85FFBD 0%, #FFFB7D 100%);
+  padding: 1em;
 }
 
 nav {
@@ -32,11 +32,14 @@ h1 {
 }
 
 .intro-container {
+  padding: 1em;
+  background-color: #ffff;
   margin: 0 auto;
   max-width: 500px;
-  border: 3px solid #efaff8;
+  /* border: 3px solid #efaff8; */
   text-align: center;
   border-radius: 20px;
+  box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
 }
 
 .map {
@@ -45,8 +48,13 @@ h1 {
   margin: 1em auto;
   overflow: hidden;
   max-width: 900px;
+  box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
 }
 
 .top-countries-poll {
   text-align: center;
+}
+
+#reactgooglegraph-1 {
+  margin: 0 auto;
 }
